--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node server",
-    "dev": "node --watch --env-file=.env server",
+    "start": "node src/server",
+    "dev": "node --watch --env-file=.env src/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
