--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,14 +1,7 @@
-FROM node:22
-
+FROM node:22 as builder
 WORKDIR /app
-
-COPY package*.json ./
-
-RUN npm install
-
 COPY . .
+RUN npm install && npm run build
 
-EXPOSE 5173
-EXPOSE 24678
-
-CMD ["npm", "run" , "dev", "--", "--host", "0.0.0.0"]
+FROM nginx:alpine
+COPY --from=builder /app/dist /usr/share/nginx/html
